--- a/index.html
+++ b/index.html
@@ -1,18 +1,38 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <link rel="stylesheet" href="./assets/css/responsive.css">
-    <link rel="stylesheet" href="./assets/css/reset.css">
-    <link rel="stylesheet" href="./assets/css/style.css">
-    <link rel="stylesheet" href="./assets/css/variables.css">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <link rel="stylesheet" href="./assets/css/responsive.css" />
+    <link rel="stylesheet" href="./assets/css/reset.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/variables.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Decola Juninho - Landing Page</title>
-</head>
-<body>
+  </head>
+  <body>
+    <header class="header">
+      <figure class="logo-container">
+        <img src="" alt="logo" class="logo-image" />
+        <h1 class="logo-title">Decola Juninho</h1>
+      </figure>
+      <nav class="nav-bar">
+        <ul class="nav-buttons">
+          <li class="nav-item link">Home</li>
+          <li class="nav-item link">Sobre nós</li>
+          <li class="nav-item link">Vagas</li>
+          <li class="nav-item button login"><button>Login</button></li>
+          <li class="nav-item button register"><button>Cadastre-se</button></li>
+        </ul>
+      </nav>
+    </header>
     <main class="container">
-
+        <section class="hero">
+            
+        </section>
     </main>
-</body>
-<script src="./assets/js/index.js" type="text/javascript"></script>
+    <footer>
+
+    </footer>
+  </body>
+  <script src="./assets/js/index.js" type="text/javascript"></script>
 </html>
