--- a/index.html
+++ b/index.html
@@ -17,22 +17,28 @@
       </figure>
       <nav class="nav-bar">
         <ul class="nav-buttons">
-          <li class="nav-item link">Home</li>
-          <li class="nav-item link">Sobre nós</li>
-          <li class="nav-item link">Vagas</li>
-          <li class="nav-item button login"><button>Login</button></li>
-          <li class="nav-item button register"><button>Cadastre-se</button></li>
+          <li class="nav-item">
+            <a href="" class="link"> Home </a>
+          </li>
+          <li class="nav-item">
+            <a href="" class="link"> Sobre nós </a>
+          </li>
+          <li class="nav-item">
+            <a href="" class="link"> Vagas </a>
+          </li>
+          <li class="nav-item">
+            <button class="nav-button login">Login</button>
+          </li>
+          <li class="nav-item">
+            <button class="nav-button register">Cadastre-se</button>
+          </li>
         </ul>
       </nav>
     </header>
     <main class="container">
-        <section class="hero">
-            
-        </section>
+      <section class="hero"></section>
     </main>
-    <footer>
-
-    </footer>
+    <footer></footer>
   </body>
   <script src="./assets/js/index.js" type="text/javascript"></script>
 </html>
