feat(index.html): configure hero tags organization

--- a/index.html
+++ b/index.html
@@ -36,7 +36,26 @@
       </nav>
     </header>
     <main class="container">
-      <section class="hero"></section>
+      <section class="hero">
+        <form class="hero-info">
+          <h2 class="hero-title">
+            A oportunidade que você precisa para decolar na carreira está aqui!
+          </h2>
+          <p class="hero-text">Comece sua jornada de sucesso agora!</p>
+          <label for="search-vacancy" class="hero-label">
+            <input
+              class="search-vacancy"
+              type="text"
+              name="search-vacancy"
+              id="search-vacancy"
+              placeholder="Nome da vaga | cargo..."
+            />
+            <button type="submit" class="search-vacancy-button">Buscar</button>
+          </label>
+        </form>
+        <img src="" alt="Imagem principal" class="hero-image" />
+        <img src="" alt="Borda" class="hero-board" />
+      </section>
     </main>
     <footer></footer>
   </body>
