feat(index.html): configure and organize companies-section tags

--- a/index.html
+++ b/index.html
@@ -56,6 +56,29 @@
         <img src="" alt="Imagem principal" class="hero-image" />
         <img src="" alt="Borda" class="hero-board" />
       </section>
+
+      <section class="companies-section">
+        <div class="companies-info">
+          <h3 class="companies-title">Empresas Inovadoras Esperam por Você!</h3>
+          <p class="companies-text">
+            Descubra oportunidades abertas em instituições líderes na nossa
+            plataforma e explore-as agora!
+          </p>
+        </div>
+        <div class="companies-info">
+          <div class="companies-logos">
+            <img src="" alt="vector" />
+            <img src="" alt="vector" />
+            <img src="" alt="vector" />
+            <img src="" alt="vector" />
+            <img src="" alt="vector" />
+            <img src="" alt="vector" />
+            <img src="" alt="vector" />
+          </div>
+          <p class="vacancy-number">+267 vagas estão esperando por você!</p>
+        </div>
+      </section>
+      
     </main>
     <footer></footer>
   </body>
