feat(index.html): configure and organize about-section tags

--- a/index.html
+++ b/index.html
@@ -78,6 +78,24 @@
           <p class="vacancy-number">+267 vagas estão esperando por você!</p>
         </div>
       </section>
+
+      <section class="about-section">
+        <h2 class="about-title">Quem é o Decola Juninho?</h2>
+        <div class="about-info">
+          <p class="about-text">
+            É mais que uma plataforma; é um apoio para iniciantes na área de
+            tecnologia em busca de sua primeira oportunidade profissional.
+            Acreditamos que todos merecem uma chance de iniciar e prosperar em
+            suas carreiras. Com nossa comunidade envolvente e colaborativa,
+            conectamos talentos em ascensão a empresas e projetos
+            significativos, facilitando o crescimento mútuo.
+            <br />
+            Vem conosco decolar na sua trajetória profissional! 🚀
+          </p>
+          <button class="about-button" type="button">Saiba Mais</button>
+        </div>
+        <img src="" alt="Logo da Decola Juninho" />
+      </section>
       
     </main>
     <footer></footer>
