--- a/index.html
+++ b/index.html
@@ -96,7 +96,28 @@
         </div>
         <img src="" alt="Logo da Decola Juninho" />
       </section>
-      
+
+      <section class="about-for-candidates">
+        <div class="candidates-banner">
+          <h3 class="candidates-title">
+            Para <span class="candidates-title-hightlight">Candidatos</span>
+          </h3>
+          <img src="" alt="Candidato usando o notebook" />
+        </div>
+        <div class="candidates-info">
+          <h4 class="candidates-text highlight">
+            Encontre <span class="highlighted-word">gratuitamente</span> oportunidades <span class="highlighted-word">Júnior</span> para impulsionar sua
+            carreira!
+          </h4>
+          <p class="candidates-text">
+            Descubra sua próxima chance em nossa equipe e comece sua jornada de
+            sucesso.
+          </p>
+          <button class="candidates-button">
+            Comece a criar seu currículo
+          </button>
+        </div>
+      </section>
     </main>
     <footer></footer>
   </body>
