feat(index.html): configure and organize about-for-companies section tags

--- a/index.html
+++ b/index.html
@@ -106,7 +106,9 @@
         </div>
         <div class="candidates-info">
           <h4 class="candidates-text highlight">
-            Encontre <span class="highlighted-word">gratuitamente</span> oportunidades <span class="highlighted-word">Júnior</span> para impulsionar sua
+            Encontre
+            <span class="highlighted-word">gratuitamente</span> oportunidades
+            <span class="highlighted-word">Júnior</span> para impulsionar sua
             carreira!
           </h4>
           <p class="candidates-text">
@@ -116,6 +118,25 @@
           <button class="candidates-button">
             Comece a criar seu currículo
           </button>
+        </div>
+      </section>
+
+      <section class="about-for-companies">
+        <div class="companies-info">
+          <h4 class="companies-text highlight">
+            Descubra novos talentos para posições estratégicas na sua empresa!
+          </h4>
+          <p class="companies-text">
+            Encontre profissionais qualificados para fortalecer sua equipe e
+            alcançar o sucesso.
+          </p>
+          <button class="companies-button">Cadastre suas vagas</button>
+        </div>
+        <div class="companies-banner">
+          <h3 class="companies-title">
+            Para <span class="companies-title-hightlight">Empresas</span>
+          </h3>
+          <img src="" alt="Recrutador usando um tablet" />
         </div>
       </section>
     </main>
