feat(index.html): configure and organize partners-section tags

--- a/index.html
+++ b/index.html
@@ -66,15 +66,29 @@
           </p>
         </div>
         <div class="companies-info">
-          <div class="companies-logos">
-            <img src="" alt="vector" />
-            <img src="" alt="vector" />
-            <img src="" alt="vector" />
-            <img src="" alt="vector" />
-            <img src="" alt="vector" />
-            <img src="" alt="vector" />
-            <img src="" alt="vector" />
-          </div>
+          <ul class="companies-list">
+            <li class="company">
+              <img src="" alt="logo" class="company-logo" />
+            </li>
+            <li class="company">
+              <img src="" alt="logo" class="company-logo" />
+            </li>
+            <li class="company">
+              <img src="" alt="logo" class="company-logo" />
+            </li>
+            <li class="company">
+              <img src="" alt="logo" class="company-logo" />
+            </li>
+            <li class="company">
+              <img src="" alt="logo" class="company-logo" />
+            </li>
+            <li class="company">
+              <img src="" alt="logo" class="company-logo" />
+            </li>
+            <li class="company">
+              <img src="" alt="logo" class="company-logo" />
+            </li>
+          </ul>
           <p class="vacancy-number">+267 vagas estão esperando por você!</p>
         </div>
       </section>
@@ -138,6 +152,58 @@
           </h3>
           <img src="" alt="Recrutador usando um tablet" />
         </div>
+      </section>
+
+      <section class="partners-section">
+        <h3 class="partners-title">Parceiros de Excelência!</h3>
+        <p class="partners-text">
+          Estamos entusiasmados em oferecer aos nossos Juninhos recursos
+          educacionais de alta qualidade, graças às nossas valiosas parcerias!
+        </p>
+        <ul class="partners-list">
+          <li class="partner">
+            <img
+              src=""
+              alt="Logo da parceira da Decola Juninho"
+              class="partner-image"
+            />
+          </li>
+          <li class="partner">
+            <img
+              src=""
+              alt="Logo da parceira da Decola Juninho"
+              class="partner-image"
+            />
+          </li>
+          <li class="partner">
+            <img
+              src=""
+              alt="Logo da parceira da Decola Juninho"
+              class="partner-image"
+            />
+          </li>
+          <li class="partner">
+            <img
+              src=""
+              alt="Logo da parceira da Decola Juninho"
+              class="partner-image"
+            />
+          </li>
+          <li class="partner">
+            <img
+              src=""
+              alt="Logo da parceira da Decola Juninho"
+              class="partner-image"
+            />
+          </li>
+          <li class="partner">
+            <img
+              src=""
+              alt="Logo da parceira da Decola Juninho"
+              class="partner-image"
+            />
+          </li>
+        </ul>
       </section>
     </main>
     <footer></footer>
