--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
         </ul>
       </nav>
     </header>
+    
     <main class="container">
       <section class="hero">
         <form class="hero-info">
@@ -204,6 +205,81 @@
             />
           </li>
         </ul>
+      </section>
+
+      <section class="faqs-section">
+        <img
+          src=""
+          alt="Pessoa interessada enviando uma dúvida pelo notebook"
+          class="faqs-image"
+        />
+        <div class="faqs-info">
+          <h3 class="faqs-title">Dúvidas sobre o Decola</h3>
+          <ul class="faqs">
+            <li class="faq">
+              <div class="faq-data">
+                <button class="open-answer-button">
+                  <h4 class="question">Como cadastrar meu currículo?</h4>
+                  <i class="plus-icon">+</i>
+                </button>
+                <p class="anwser">
+                  Para cadastrar seu currículo, acesse a sessão de...
+                </p>
+              </div>
+            </li>
+            <li class="faq">
+              <div class="faq-data">
+                <button class="open-answer-button">
+                  <h4 class="question">
+                    Como faço para acompanhar o status da minha candidatura?
+                  </h4>
+                  <i class="plus-icon">+</i>
+                </button>
+                <p class="anwser">
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit...
+                </p>
+              </div>
+            </li>
+            <li class="faq">
+              <div class="faq-data">
+                <button class="open-answer-button">
+                  <h4 class="question">
+                    Há retorno sobre a vaga, mesmo que seja positivo ou negaivo?
+                  </h4>
+                  <i class="plus-icon">+</i>
+                </button>
+                <p class="anwser">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit...
+                </p>
+              </div>
+            </li>
+            <li class="faq">
+              <div class="faq-data">
+                <button class="open-answer-button">
+                  <h4 class="question">
+                    Trabalhos de projetos durante a faculdade contam como
+                    experiência?
+                  </h4>
+                  <i class="plus-icon">+</i>
+                </button>
+                <p class="anwser">
+                  Lorem ipsum dolor, sit amet consectetur adipisicing elit...
+                </p>
+              </div>
+            </li>
+            <li class="faq">
+              <div class="faq-data">
+                <button class="open-answer-button">
+                  <h4 class="question">Há oportunidades de trabalho remoto?</h4>
+                  <i class="plus-icon">+</i>
+                </button>
+                <p class="anwser">
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit...
+                </p>
+              </div>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
     <footer></footer>
