feat(index.html): configure and organize featured-vacancies section tags

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </ul>
       </nav>
     </header>
-    
+
     <main class="container">
       <section class="hero">
         <form class="hero-info">
@@ -280,6 +280,36 @@
             </li>
           </ul>
         </div>
+      </section>
+
+      <section class="featured-vacancies">
+        <h3 class="featured-vacancies-title">Vagas e cargos em alta:</h3>
+        <ul class="tags">
+          <li class="tag">
+            <p class="tag-text">#devmobile</p>
+          </li>
+          <li class="tag">
+            <p class="tag-text">#uxdesigner</p>
+          </li>
+          <li class="tag">
+            <p class="tag-text">#uxdesigner</p>
+          </li>
+          <li class="tag">
+            <p class="tag-text">#devfrontend</p>
+          </li>
+          <li class="tag">
+            <p class="tag-text">#QA</p>
+          </li>
+          <li class="tag">
+            <p class="tag-text">#designer</p>
+          </li>
+          <li class="tag">
+            <p class="tag-text">#uxdesigner</p>
+          </li>
+          <li class="tag">
+            <p class="tag-text">#devbackend</p>
+          </li>
+        </ul>
       </section>
     </main>
     <footer></footer>
