feat(index.html): configure and organize feedbacks-section tags

--- a/index.html
+++ b/index.html
@@ -311,6 +311,54 @@
           </li>
         </ul>
       </section>
+
+      <section class="feedbacks-section">
+        <h2 class="feedbacks-title"></h2>
+        <ul class="feedbacks-carousel">
+          <li class="feedback">
+            <div class="feedback-header">
+              <strong class="feedback-author">Solange Silva</strong>
+              <p class="author-position">Product Designer</p>
+            </div>
+            <p class="feedback-text">
+              Graças ao Decola Juninho consegui a minha primeira oportunidade de
+              emprego como UX Design JR. Recomendo para todos!!!
+            </p>
+            <p class="linkedin">
+              <img src="" alt="Ícone do Linkedin" class="linkedin-icon" />
+              /solangesilva
+            </p>
+          </li>
+          <li class="feedback">
+            <div class="feedback-header">
+              <strong class="feedback-author">Vcitor Alves</strong>
+              <p class="author-position">Dev. Back End</p>
+            </div>
+            <p class="feedback-text">
+              Um enorme obrigado ao Decola Juninho! Graças a eles, iniciei minha
+              carreira como BackEnd Júnior. Vaga toooop #recomendo
+            </p>
+            <p class="linkedin">
+              <img src="" alt="Ícone do Linkedin" class="linkedin-icon" />
+              /victoralves
+            </p>
+          </li>
+          <li class="feedback">
+            <div class="feedback-header">
+              <strong class="feedback-author">João Pedro</strong>
+              <p class="author-position">Dev. Front End</p>
+            </div>
+            <p class="feedback-text">
+              Consegui o meu primeiro job (E INTERNACIONAL) como FrontEnd JR
+              através do Decola Juninho. Só tenho que agradecer!!!!!!!!
+            </p>
+            <p class="linkedin">
+              <img src="" alt="Ícone do Linkedin" class="linkedin-icon" />
+              /joãopedro
+            </p>
+          </li>
+        </ul>
+      </section>
     </main>
     <footer></footer>
   </body>
