--- a/index.html
+++ b/index.html
@@ -360,7 +360,53 @@
         </ul>
       </section>
     </main>
-    <footer></footer>
+
+    <footer class="footer">
+      <figure class="logo">
+        <img src="" alt="Logo Decola Juninho" class="logo-image" />
+        <p class="logo-text">Decola Juninho</p>
+      </figure>
+      <nav class="footer-links">
+        <h4 class="links-title">Institucional</h4>
+        <ul class="links-list">
+          <link-item><a href="/" class="link">Home</a></link-item>
+          <link-item><a href="/" class="link">Sobre nós</a></link-item>
+          <link-item><a href="/" class="link">Vagas</a></link-item>
+          <link-item
+            ><a href="/" class="link"
+              >Diretrizes sobre a comunidade
+            </a></link-item
+          >
+        </ul>
+      </nav>
+      <nav class="footer-links">
+        <h4 class="links-title">Institucional</h4>
+        <ul class="links-list">
+          <link-item><a href="/" class="link">Home</a></link-item>
+          <link-item><a href="/" class="link">Sobre nós</a></link-item>
+          <link-item><a href="/" class="link">Vagas</a></link-item>
+          <link-item
+            ><a href="/" class="link"
+              >Diretrizes sobre a comunidade
+            </a></link-item
+          >
+        </ul>
+      </nav>
+      <ul class="social-media-list">
+        <li class="social-media-link">
+          <img src="" alt="email" class="social-media-logo" />
+        </li>
+        <li class="social-media-link">
+          <img src="" alt="whatsapp" class="social-media-logo" />
+        </li>
+        <li class="social-media-link">
+          <img src="" alt="linkedin" class="social-media-logo" />
+        </li>
+        <li class="social-media-link">
+          <img src="" alt="instagram" class="social-media-logo" />
+        </li>
+      </ul>
+    </footer>
   </body>
   <script src="./assets/js/index.js" type="text/javascript"></script>
 </html>
