--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!doctype html>
 <html lang="en">
   <head>
+    <link rel="icon" type="image/x-icon" href="assets/imgs/favicon.ico" />
     <link rel="stylesheet" href="./assets/css/responsive.css" />
     <link rel="stylesheet" href="./assets/css/reset.css" />
     <link rel="stylesheet" href="./assets/css/style.css" />
@@ -12,7 +13,7 @@
   <body>
     <header class="header">
       <figure class="logo-container">
-        <img src="" alt="logo" class="logo-image" />
+        <img src="./assets/imgs/logo.png " alt="logo" class="logo-image" />
         <h1 class="logo-title">Decola Juninho</h1>
       </figure>
       <nav class="nav-bar">
@@ -54,8 +55,16 @@
             <button type="submit" class="search-vacancy-button">Buscar</button>
           </label>
         </form>
-        <img src="" alt="Imagem principal" class="hero-image" />
-        <img src="" alt="Borda" class="hero-board" />
+        <img
+          src="./assets/imgs/hero-image.webp"
+          alt="Imagem principal"
+          class="hero-image"
+        />
+        <img
+          src="./assets/imgs/hero-border.webp"
+          alt="Borda"
+          class="hero-boarder"
+        />
       </section>
 
       <section class="companies-section">
@@ -69,25 +78,53 @@
         <div class="companies-info">
           <ul class="companies-list">
             <li class="company">
-              <img src="" alt="logo" class="company-logo" />
+              <img
+                src="./assets/imgs/icons/companies/dropbox-icon.webp"
+                alt="logo"
+                class="company-logo"
+              />
             </li>
             <li class="company">
-              <img src="" alt="logo" class="company-logo" />
+              <img
+                src="./assets/imgs/icons/companies/amazon-icon.webp"
+                alt="logo"
+                class="company-logo"
+              />
             </li>
             <li class="company">
-              <img src="" alt="logo" class="company-logo" />
+              <img
+                src="./assets/imgs/icons/companies/ifood-icon.webp"
+                alt="logo"
+                class="company-logo"
+              />
             </li>
             <li class="company">
-              <img src="" alt="logo" class="company-logo" />
+              <img
+                src="./assets/imgs/icons/companies/apple-icon.webp"
+                alt="logo"
+                class="company-logo"
+              />
             </li>
             <li class="company">
-              <img src="" alt="logo" class="company-logo" />
+              <img
+                src="./assets/imgs/icons/companies/discord-icon.webp"
+                alt="logo"
+                class="company-logo"
+              />
             </li>
             <li class="company">
-              <img src="" alt="logo" class="company-logo" />
+              <img
+                src="./assets/imgs/icons/companies/mc-donalds-icon.webp"
+                alt="logo"
+                class="company-logo"
+              />
             </li>
             <li class="company">
-              <img src="" alt="logo" class="company-logo" />
+              <img
+                src="./assets/imgs/icons/companies/plus-icon.webp"
+                alt="logo"
+                class="company-logo"
+              />
             </li>
           </ul>
           <p class="vacancy-number">+267 vagas estão esperando por você!</p>
@@ -109,7 +146,10 @@
           </p>
           <button class="about-button" type="button">Saiba Mais</button>
         </div>
-        <img src="" alt="Logo da Decola Juninho" />
+        <img
+          src="./assets/imgs/decola-juninho-boarder.webp"
+          alt="Logo da Decola Juninho"
+        />
       </section>
 
       <section class="about-for-candidates">
@@ -117,7 +157,10 @@
           <h3 class="candidates-title">
             Para <span class="candidates-title-hightlight">Candidatos</span>
           </h3>
-          <img src="" alt="Candidato usando o notebook" />
+          <img
+            src="./assets/imgs/candidate.webp"
+            alt="Candidato usando o notebook"
+          />
         </div>
         <div class="candidates-info">
           <h4 class="candidates-text highlight">
@@ -151,7 +194,10 @@
           <h3 class="companies-title">
             Para <span class="companies-title-hightlight">Empresas</span>
           </h3>
-          <img src="" alt="Recrutador usando um tablet" />
+          <img
+            src="./assets/imgs/recruiter.webp"
+            alt="Recrutador usando um tablet"
+          />
         </div>
       </section>
 
@@ -164,42 +210,42 @@
         <ul class="partners-list">
           <li class="partner">
             <img
-              src=""
+              src="assets/imgs/icons/partners/udemy-icon.webp"
               alt="Logo da parceira da Decola Juninho"
               class="partner-image"
             />
           </li>
           <li class="partner">
             <img
-              src=""
+              src="assets/imgs/icons/partners/coursera-icon.webp"
               alt="Logo da parceira da Decola Juninho"
               class="partner-image"
             />
           </li>
           <li class="partner">
             <img
-              src=""
+              src="assets/imgs/icons/partners/alura-icon.webp"
               alt="Logo da parceira da Decola Juninho"
               class="partner-image"
             />
           </li>
           <li class="partner">
             <img
-              src=""
+              src="assets/imgs/icons/partners/udemy-icon.webp"
               alt="Logo da parceira da Decola Juninho"
               class="partner-image"
             />
           </li>
           <li class="partner">
             <img
-              src=""
+              src="assets/imgs/icons/partners/alura-icon.webp"
               alt="Logo da parceira da Decola Juninho"
               class="partner-image"
             />
           </li>
           <li class="partner">
             <img
-              src=""
+              src="assets/imgs/icons/partners/coursera-icon.webp"
               alt="Logo da parceira da Decola Juninho"
               class="partner-image"
             />
@@ -209,7 +255,7 @@
 
       <section class="faqs-section">
         <img
-          src=""
+          src="assets/imgs/faqs-image.webp"
           alt="Pessoa interessada enviando uma dúvida pelo notebook"
           class="faqs-image"
         />
@@ -313,97 +359,157 @@
       </section>
 
       <section class="feedbacks-section">
-        <h2 class="feedbacks-title"></h2>
+        <h2 class="feedbacks-title">
+          Feedback de profissionais que decolaram!
+        </h2>
         <ul class="feedbacks-carousel">
           <li class="feedback">
             <div class="feedback-header">
-              <strong class="feedback-author">Solange Silva</strong>
-              <p class="author-position">Product Designer</p>
+              <img
+                src="assets/imgs/avatar/solange-avatar.webp"
+                alt="avatar"
+                class="avatar"
+              />
+              <div class="author-info">
+                <strong class="feedback-author">Solange Silva</strong>
+                <p class="author-position">Product Designer</p>
+              </div>
             </div>
             <p class="feedback-text">
               Graças ao Decola Juninho consegui a minha primeira oportunidade de
               emprego como UX Design JR. Recomendo para todos!!!
             </p>
             <p class="linkedin">
-              <img src="" alt="Ícone do Linkedin" class="linkedin-icon" />
+              <img
+                src="assets/imgs/icons/linkedin-icon.webp"
+                alt="Ícone do Linkedin"
+                class="linkedin-icon"
+              />
               /solangesilva
             </p>
           </li>
           <li class="feedback">
             <div class="feedback-header">
-              <strong class="feedback-author">Vcitor Alves</strong>
-              <p class="author-position">Dev. Back End</p>
+              <img
+                src="assets/imgs/avatar/victor-avatar.webp"
+                alt="avatar"
+                class="avatar"
+              />
+              <div class="author-info">
+                <strong class="feedback-author">Vcitor Alves</strong>
+                <p class="author-position">Dev. Back End</p>
+              </div>
             </div>
             <p class="feedback-text">
               Um enorme obrigado ao Decola Juninho! Graças a eles, iniciei minha
               carreira como BackEnd Júnior. Vaga toooop #recomendo
             </p>
             <p class="linkedin">
-              <img src="" alt="Ícone do Linkedin" class="linkedin-icon" />
+              <img
+                src="assets/imgs/icons/linkedin-icon.webp"
+                alt="Ícone do Linkedin"
+                class="linkedin-icon"
+              />
               /victoralves
             </p>
           </li>
           <li class="feedback">
             <div class="feedback-header">
-              <strong class="feedback-author">João Pedro</strong>
-              <p class="author-position">Dev. Front End</p>
+              <img
+                src="assets/imgs/avatar/joao-avatar.webp"
+                alt="avatar"
+                class="avatar"
+              />
+              <div class="author-info">
+                <strong class="feedback-author">João Pedro</strong>
+                <p class="author-position">Dev. Front End</p>
+              </div>
             </div>
             <p class="feedback-text">
               Consegui o meu primeiro job (E INTERNACIONAL) como FrontEnd JR
               através do Decola Juninho. Só tenho que agradecer!!!!!!!!
             </p>
             <p class="linkedin">
-              <img src="" alt="Ícone do Linkedin" class="linkedin-icon" />
+              <img
+                src="assets/imgs/icons/linkedin-icon.webp"
+                alt="Ícone do Linkedin"
+                class="linkedin-icon"
+              />
               /joãopedro
             </p>
           </li>
+        </ul>
+        <ul class="feedback-selected-icons">
+          <li class="feedback-selected-item" />
+          <li class="feedback-selected-item" />
+          <li class="feedback-selected-item" />
+          <li class="feedback-selected-item" />
+          <li class="feedback-selected-item" />
         </ul>
       </section>
     </main>
 
     <footer class="footer">
       <figure class="logo">
-        <img src="" alt="Logo Decola Juninho" class="logo-image" />
+        <img
+          src="assets/imgs/logo.png"
+          alt="Logo Decola Juninho"
+          class="logo-image"
+        />
         <p class="logo-text">Decola Juninho</p>
       </figure>
       <nav class="footer-links">
         <h4 class="links-title">Institucional</h4>
         <ul class="links-list">
-          <link-item><a href="/" class="link">Home</a></link-item>
-          <link-item><a href="/" class="link">Sobre nós</a></link-item>
-          <link-item><a href="/" class="link">Vagas</a></link-item>
-          <link-item
+          <li class="link-item"><a href="/" class="link">Home</a></li>
+          <li class="link-item"><a href="/" class="link">Sobre nós</a></li>
+          <li class="link-item"><a href="/" class="link">Vagas</a></li>
+          <li class="link-item"
             ><a href="/" class="link"
               >Diretrizes sobre a comunidade
-            </a></link-item
+            </a></
           >
         </ul>
       </nav>
       <nav class="footer-links">
         <h4 class="links-title">Institucional</h4>
         <ul class="links-list">
-          <link-item><a href="/" class="link">Home</a></link-item>
-          <link-item><a href="/" class="link">Sobre nós</a></link-item>
-          <link-item><a href="/" class="link">Vagas</a></link-item>
-          <link-item
-            ><a href="/" class="link"
-              >Diretrizes sobre a comunidade
-            </a></link-item
-          >
+          <li class="link-item"><a href="/" class="link">Home</a></li>
+          <li class="link-item"><a href="/" class="link">Sobre nós</a></li>
+          <li class="link-item"><a href="/" class="link">Vagas</a></li>
+          <li class="link-item"
+            ><a href="/" class="link">Diretrizes sobre a comunidade </a>
+          </li>
         </ul>
       </nav>
       <ul class="social-media-list">
         <li class="social-media-link">
-          <img src="" alt="email" class="social-media-logo" />
+          <img
+            src="assets/imgs/icons/social-media/email-icon.webp"
+            alt="email"
+            class="social-media-logo"
+          />
         </li>
         <li class="social-media-link">
-          <img src="" alt="whatsapp" class="social-media-logo" />
+          <img
+            src="assets/imgs/icons/social-media/whatsapp-icon.webp"
+            alt="whatsapp"
+            class="social-media-logo"
+          />
         </li>
         <li class="social-media-link">
-          <img src="" alt="linkedin" class="social-media-logo" />
+          <img
+            src="assets/imgs/icons/social-media/linkedin-icon.webp"
+            alt="linkedin"
+            class="social-media-logo"
+          />
         </li>
         <li class="social-media-link">
-          <img src="" alt="instagram" class="social-media-logo" />
+          <img
+            src="assets/imgs/icons/social-media/instagram-icon.webp"
+            alt="instagram"
+            class="social-media-logo"
+          />
         </li>
       </ul>
     </footer>
