refactor(index.html): run prettier code formatter to fix mistakes

--- a/index.html
+++ b/index.html
@@ -464,11 +464,9 @@
           <li class="link-item"><a href="/" class="link">Home</a></li>
           <li class="link-item"><a href="/" class="link">Sobre nós</a></li>
           <li class="link-item"><a href="/" class="link">Vagas</a></li>
-          <li class="link-item"
-            ><a href="/" class="link"
-              >Diretrizes sobre a comunidade
-            </a></
-          >
+          <li class="link-item">
+            <a href="/" class="link">Diretrizes sobre a comunidade </a>
+          </li>
         </ul>
       </nav>
       <nav class="footer-links">
@@ -477,8 +475,8 @@
           <li class="link-item"><a href="/" class="link">Home</a></li>
           <li class="link-item"><a href="/" class="link">Sobre nós</a></li>
           <li class="link-item"><a href="/" class="link">Vagas</a></li>
-          <li class="link-item"
-            ><a href="/" class="link">Diretrizes sobre a comunidade </a>
+          <li class="link-item">
+            <a href="/" class="link">Diretrizes sobre a comunidade </a>
           </li>
         </ul>
       </nav>
