feat(style.css, index.html): enhance layout structure and add new image assets

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <img
           src="./assets/imgs/hero-border.webp"
           alt="Borda"
-          class="hero-boarder"
+          class="hero-border"
         />
       </section>
 
@@ -147,7 +147,7 @@
           <button class="about-button" type="button">Saiba Mais</button>
         </div>
         <img
-          src="./assets/imgs/decola-juninho-boarder.webp"
+          src="./assets/imgs/decola-juninho-border.webp"
           alt="Logo da Decola Juninho"
         />
       </section>
@@ -264,7 +264,7 @@
           <ul class="faqs">
             <li class="faq">
               <div class="faq-data">
-                <button class="open-answer-button">
+                <button class="open-answer-button" aria-expanded="false">
                   <h4 class="question">Como cadastrar meu currículo?</h4>
                   <i class="plus-icon">+</i>
                 </button>
@@ -275,7 +275,7 @@
             </li>
             <li class="faq">
               <div class="faq-data">
-                <button class="open-answer-button">
+                <button class="open-answer-button" aria-expanded="false">
                   <h4 class="question">
                     Como faço para acompanhar o status da minha candidatura?
                   </h4>
@@ -288,9 +288,10 @@
             </li>
             <li class="faq">
               <div class="faq-data">
-                <button class="open-answer-button">
+                <button class="open-answer-button" aria-expanded="false">
                   <h4 class="question">
-                    Há retorno sobre a vaga, mesmo que seja positivo ou negaivo?
+                    Há retorno sobre a vaga, mesmo que seja positivo ou
+                    negativo?
                   </h4>
                   <i class="plus-icon">+</i>
                 </button>
@@ -301,7 +302,7 @@
             </li>
             <li class="faq">
               <div class="faq-data">
-                <button class="open-answer-button">
+                <button class="open-answer-button" aria-expanded="false">
                   <h4 class="question">
                     Trabalhos de projetos durante a faculdade contam como
                     experiência?
@@ -315,7 +316,7 @@
             </li>
             <li class="faq">
               <div class="faq-data">
-                <button class="open-answer-button">
+                <button class="open-answer-button" aria-expanded="false">
                   <h4 class="question">Há oportunidades de trabalho remoto?</h4>
                   <i class="plus-icon">+</i>
                 </button>
