style(style.css): configure header styles

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <h1 class="logo-title">Decola Juninho</h1>
       </figure>
       <nav class="nav-bar">
-        <ul class="nav-buttons">
+        <ul class="nav-links">
           <li class="nav-item">
             <a href="" class="link"> Home </a>
           </li>
@@ -33,6 +33,8 @@
           <li class="nav-item">
             <a href="" class="link"> Vagas </a>
           </li>
+        </ul>
+        <ul class="nav-buttons">
           <li class="nav-item">
             <button class="nav-button login">Login</button>
           </li>
