style(response.css): configure small devices screen responsivity

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
       rel="stylesheet"
     />
     <link rel="icon" type="image/x-icon" href="assets/imgs/favicon.ico" />
-    <link rel="stylesheet" href="./assets/css/responsive.css" />
     <link rel="stylesheet" href="./assets/css/reset.css" />
-    <link rel="stylesheet" href="./assets/css/style.css" />
     <link rel="stylesheet" href="./assets/css/variables.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="stylesheet" href="./assets/css/responsive.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Decola Juninho - Landing Page</title>
@@ -58,16 +58,18 @@
               type="text"
               name="search-vacancy"
               id="search-vacancy"
-              placeholder="Nome da vaga | cargo..."
+              placeholder="Nome da vaga | cargo"
             />
             <button type="submit" class="search-vacancy-button">Buscar</button>
           </label>
         </form>
-        <img
-          src="./assets/imgs/hero-image.webp"
-          alt="Imagem principal"
-          class="hero-image"
-        />
+        <figure class="hero-image-container">
+          <img
+            src="./assets/imgs/hero-image.webp"
+            alt="Imagem principal"
+            class="hero-image"
+          />
+        </figure>
         <img
           src="./assets/imgs/hero-border.webp"
           alt="Borda"
