style(styles.css): style companies-section

--- a/index.html
+++ b/index.html
@@ -137,7 +137,9 @@
               />
             </li>
           </ul>
-          <p class="vacancy-number">+267 vagas estão esperando por você!</p>
+          <p class="vacancy-number">
+            <strong>+267 vagas</strong> estão esperando por você!
+          </p>
         </div>
       </section>
 
