--- a/index.html
+++ b/index.html
@@ -144,23 +144,33 @@
       </section>
 
       <section class="about-section">
-        <h2 class="about-title">Quem é o Decola Juninho?</h2>
-        <div class="about-info">
-          <p class="about-text">
-            É mais que uma plataforma; é um apoio para iniciantes na área de
-            tecnologia em busca de sua primeira oportunidade profissional.
-            Acreditamos que todos merecem uma chance de iniciar e prosperar em
-            suas carreiras. Com nossa comunidade envolvente e colaborativa,
-            conectamos talentos em ascensão a empresas e projetos
-            significativos, facilitando o crescimento mútuo.
-            <br />
-            Vem conosco decolar na sua trajetória profissional! 🚀
-          </p>
-          <button class="about-button" type="button">Saiba Mais</button>
+        <div class="about-container">
+          <h2 class="about-title">Quem é o <br />Decola Juninho?</h2>
+          <div class="about-info">
+            <p class="about-text">
+              <strong>É mais que uma plataforma;</strong> é um apoio para
+              iniciantes na área de tecnologia em busca de sua primeira
+              oportunidade profissional.
+              <span class="highlight-text">
+                Acreditamos que todos merecem uma chance de iniciar
+              </span>
+              e prosperar em suas carreiras. Com nossa comunidade envolvente e
+              colaborativa,
+              <strong
+                >conectamos talentos em ascensão a empresas e projetos
+                significativos, facilitando o crescimento mútuo.</strong
+              >
+            </p>
+            <p class="about-text">
+              Vem conosco decolar na sua trajetória profissional! 🚀
+            </p>
+            <button class="about-button" type="button">Saiba Mais</button>
+          </div>
         </div>
         <img
           src="./assets/imgs/decola-juninho-border.webp"
           alt="Logo da Decola Juninho"
+          class="about-border"
         />
       </section>
 
