style(styles.css): style candidates-section

--- a/index.html
+++ b/index.html
@@ -175,29 +175,29 @@
       </section>
 
       <section class="about-for-candidates">
-        <div class="candidates-banner">
-          <h3 class="candidates-title">
-            Para <span class="candidates-title-hightlight">Candidatos</span>
-          </h3>
-          <img
-            src="./assets/imgs/candidate.webp"
-            alt="Candidato usando o notebook"
-          />
-        </div>
-        <div class="candidates-info">
-          <h4 class="candidates-text highlight">
-            Encontre
-            <span class="highlighted-word">gratuitamente</span> oportunidades
-            <span class="highlighted-word">Júnior</span> para impulsionar sua
-            carreira!
-          </h4>
-          <p class="candidates-text">
-            Descubra sua próxima chance em nossa equipe e comece sua jornada de
-            sucesso.
-          </p>
-          <button class="candidates-button">
-            Comece a criar seu currículo
-          </button>
+        <div class="candidates-container">
+          <figure class="candidates-banner">
+            <img
+              src="./assets/imgs/candidate.webp"
+              alt="Candidato usando o notebook"
+              class="cadidate-image"
+            />
+          </figure>
+          <div class="candidates-info">
+            <h4 class="candidates-title">
+              Encontre
+              <span class="highlighted-word">gratuitamente</span> oportunidades
+              <span class="highlighted-word">Júnior</span> para impulsionar sua
+              carreira!
+            </h4>
+            <p class="candidates-text">
+              Descubra sua próxima chance em nossa equipe e comece sua jornada
+              de sucesso.
+            </p>
+            <button class="candidates-button">
+              Comece a criar seu currículo
+            </button>
+          </div>
         </div>
       </section>
 
