style(style.css): configure companies-section styles

--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 
       <section class="about-for-companies">
         <div class="companies-info">
-          <h4 class="companies-text highlight">
+          <h4 class="companies-title">
             Descubra novos talentos para posições estratégicas na sua empresa!
           </h4>
           <p class="companies-text">
@@ -212,15 +212,13 @@
           </p>
           <button class="companies-button">Cadastre suas vagas</button>
         </div>
-        <div class="companies-banner">
-          <h3 class="companies-title">
-            Para <span class="companies-title-hightlight">Empresas</span>
-          </h3>
+        <figure class="companies-banner">
           <img
             src="./assets/imgs/recruiter.webp"
             alt="Recrutador usando um tablet"
+            class="companies-image"
           />
-        </div>
+        </figure>
       </section>
 
       <section class="partners-section">
