style(styles.css/responsive.css): configure styles of parters-section

--- a/index.html
+++ b/index.html
@@ -222,55 +222,57 @@
       </section>
 
       <section class="partners-section">
-        <h3 class="partners-title">Parceiros de Excelência!</h3>
-        <p class="partners-text">
-          Estamos entusiasmados em oferecer aos nossos Juninhos recursos
-          educacionais de alta qualidade, graças às nossas valiosas parcerias!
-        </p>
-        <ul class="partners-list">
-          <li class="partner">
-            <img
-              src="assets/imgs/icons/partners/udemy-icon.webp"
-              alt="Logo da parceira da Decola Juninho"
-              class="partner-image"
-            />
-          </li>
-          <li class="partner">
-            <img
-              src="assets/imgs/icons/partners/coursera-icon.webp"
-              alt="Logo da parceira da Decola Juninho"
-              class="partner-image"
-            />
-          </li>
-          <li class="partner">
-            <img
-              src="assets/imgs/icons/partners/alura-icon.webp"
-              alt="Logo da parceira da Decola Juninho"
-              class="partner-image"
-            />
-          </li>
-          <li class="partner">
-            <img
-              src="assets/imgs/icons/partners/udemy-icon.webp"
-              alt="Logo da parceira da Decola Juninho"
-              class="partner-image"
-            />
-          </li>
-          <li class="partner">
-            <img
-              src="assets/imgs/icons/partners/alura-icon.webp"
-              alt="Logo da parceira da Decola Juninho"
-              class="partner-image"
-            />
-          </li>
-          <li class="partner">
-            <img
-              src="assets/imgs/icons/partners/coursera-icon.webp"
-              alt="Logo da parceira da Decola Juninho"
-              class="partner-image"
-            />
-          </li>
-        </ul>
+        <div class="partners-container">
+          <h3 class="partners-title">Parceiros de Excelência!</h3>
+          <p class="partners-text">
+            Estamos entusiasmados em oferecer aos nossos Juninhos recursos
+            educacionais de alta qualidade, graças às nossas valiosas parcerias!
+          </p>
+          <ul class="partners-list">
+            <li class="partner udemy">
+              <img
+                src="assets/imgs/icons/partners/udemy-icon.webp"
+                alt="Logo da parceira da Decola Juninho"
+                class="partner-image"
+              />
+            </li>
+            <li class="partner coursera">
+              <img
+                src="assets/imgs/icons/partners/coursera-icon.webp"
+                alt="Logo da parceira da Decola Juninho"
+                class="partner-image"
+              />
+            </li>
+            <li class="partner alura">
+              <img
+                src="assets/imgs/icons/partners/alura-icon.webp"
+                alt="Logo da parceira da Decola Juninho"
+                class="partner-image"
+              />
+            </li>
+            <li class="partner udemy">
+              <img
+                src="assets/imgs/icons/partners/udemy-icon.webp"
+                alt="Logo da parceira da Decola Juninho"
+                class="partner-image"
+              />
+            </li>
+            <li class="partner alura">
+              <img
+                src="assets/imgs/icons/partners/alura-icon.webp"
+                alt="Logo da parceira da Decola Juninho"
+                class="partner-image"
+              />
+            </li>
+            <li class="partner coursera">
+              <img
+                src="assets/imgs/icons/partners/coursera-icon.webp"
+                alt="Logo da parceira da Decola Juninho"
+                class="partner-image"
+              />
+            </li>
+          </ul>
+        </div>
       </section>
 
       <section class="faqs-section">
