style(styles.css/responsive.css): configure faqs-section styles

--- a/index.html
+++ b/index.html
@@ -276,76 +276,67 @@
       </section>
 
       <section class="faqs-section">
-        <img
-          src="assets/imgs/faqs-image.webp"
-          alt="Pessoa interessada enviando uma dúvida pelo notebook"
-          class="faqs-image"
-        />
+        <figure class="faqs-image-container">
+          <img
+            src="assets/imgs/faqs-image.webp"
+            alt="Pessoa interessada enviando uma dúvida pelo notebook"
+            class="faqs-image"
+          />
+        </figure>
         <div class="faqs-info">
           <h3 class="faqs-title">Dúvidas sobre o Decola</h3>
           <ul class="faqs">
             <li class="faq">
-              <div class="faq-data">
-                <button class="open-answer-button" aria-expanded="false">
-                  <h4 class="question">Como cadastrar meu currículo?</h4>
-                  <i class="plus-icon">+</i>
-                </button>
-                <p class="anwser">
-                  Para cadastrar seu currículo, acesse a sessão de...
-                </p>
-              </div>
+              <button class="open-answer-button" aria-expanded="false">
+                <h4 class="question">Como cadastrar meu currículo?</h4>
+                <i class="plus-icon">+</i>
+              </button>
+              <p class="anwser">
+                Para cadastrar seu currículo, acesse a sessão de...
+              </p>
             </li>
             <li class="faq">
-              <div class="faq-data">
-                <button class="open-answer-button" aria-expanded="false">
-                  <h4 class="question">
-                    Como faço para acompanhar o status da minha candidatura?
-                  </h4>
-                  <i class="plus-icon">+</i>
-                </button>
-                <p class="anwser">
-                  Lorem ipsum dolor sit amet consectetur, adipisicing elit...
-                </p>
-              </div>
+              <button class="open-answer-button" aria-expanded="false">
+                <h4 class="question">
+                  Como faço para acompanhar o status da minha candidatura?
+                </h4>
+                <i class="plus-icon">+</i>
+              </button>
+              <p class="anwser">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit...
+              </p>
             </li>
             <li class="faq">
-              <div class="faq-data">
-                <button class="open-answer-button" aria-expanded="false">
-                  <h4 class="question">
-                    Há retorno sobre a vaga, mesmo que seja positivo ou
-                    negativo?
-                  </h4>
-                  <i class="plus-icon">+</i>
-                </button>
-                <p class="anwser">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit...
-                </p>
-              </div>
+              <button class="open-answer-button" aria-expanded="false">
+                <h4 class="question">
+                  Há retorno sobre a vaga, mesmo que seja positivo ou negativo?
+                </h4>
+                <i class="plus-icon">+</i>
+              </button>
+              <p class="anwser">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit...
+              </p>
             </li>
             <li class="faq">
-              <div class="faq-data">
-                <button class="open-answer-button" aria-expanded="false">
-                  <h4 class="question">
-                    Trabalhos de projetos durante a faculdade contam como
-                    experiência?
-                  </h4>
-                  <i class="plus-icon">+</i>
-                </button>
-                <p class="anwser">
-                  Lorem ipsum dolor, sit amet consectetur adipisicing elit...
-                </p>
-              </div>
+              <button class="open-answer-button" aria-expanded="false">
+                <h4 class="question">
+                  Trabalhos de projetos durante a faculdade contam como
+                  experiência?
+                </h4>
+                <i class="plus-icon">+</i>
+              </button>
+              <p class="anwser">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit...
+              </p>
             </li>
             <li class="faq">
-              <div class="faq-data">
-                <button class="open-answer-button" aria-expanded="false">
-                  <h4 class="question">Há oportunidades de trabalho remoto?</h4>
-                  <i class="plus-icon">+</i>
-                </button>
-                <p class="anwser">
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit...
-                </p>
-              </div>
+              <button class="open-answer-button" aria-expanded="false">
+                <h4 class="question">Há oportunidades de trabalho remoto?</h4>
+                <i class="plus-icon">+</i>
+              </button>
+              <p class="anwser">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit...
+              </p>
             </li>
           </ul>
         </div>
