style(styles/responsive): configure styles and responsivity of footer-section

--- a/index.html
+++ b/index.html
@@ -531,64 +531,73 @@
     </main>
 
     <footer class="footer">
-      <figure class="logo">
+      <figure class="logo-container">
         <img
           src="assets/imgs/logo.png"
           alt="Logo Decola Juninho"
           class="logo-image"
         />
-        <p class="logo-text">Decola Juninho</p>
+        <p class="logo-title">Decola Juninho</p>
       </figure>
-      <nav class="footer-links">
-        <h4 class="links-title">Institucional</h4>
-        <ul class="links-list">
-          <li class="link-item"><a href="/" class="link">Home</a></li>
-          <li class="link-item"><a href="/" class="link">Sobre nós</a></li>
-          <li class="link-item"><a href="/" class="link">Vagas</a></li>
-          <li class="link-item">
-            <a href="/" class="link">Diretrizes sobre a comunidade </a>
-          </li>
-        </ul>
-      </nav>
-      <nav class="footer-links">
-        <h4 class="links-title">Institucional</h4>
-        <ul class="links-list">
-          <li class="link-item"><a href="/" class="link">Home</a></li>
-          <li class="link-item"><a href="/" class="link">Sobre nós</a></li>
-          <li class="link-item"><a href="/" class="link">Vagas</a></li>
-          <li class="link-item">
-            <a href="/" class="link">Diretrizes sobre a comunidade </a>
-          </li>
-        </ul>
-      </nav>
+      <div class="footer-links-container">
+        <nav class="footer-links">
+          <h4 class="links-title">Institucional</h4>
+          <ul class="links-list">
+            <li class="link-item"><a href="/" class="link">Home</a></li>
+            <li class="link-item"><a href="/" class="link">Sobre nós</a></li>
+            <li class="link-item"><a href="/" class="link">Vagas</a></li>
+            <li class="link-item">
+              <a href="/" class="link">Diretrizes sobre a comunidade </a>
+            </li>
+          </ul>
+        </nav>
+        <nav class="footer-links">
+          <h4 class="links-title">Legal</h4>
+          <ul class="links-list">
+            <li class="link-item"><a href="/" class="link">Parceiros</a></li>
+            <li class="link-item">
+              <a href="/" class="link">Termos e condições</a>
+            </li>
+            <li class="link-item"><a href="/" class="link">Vagas</a></li>
+          </ul>
+        </nav>
+      </div>
       <ul class="social-media-list">
-        <li class="social-media-link">
-          <img
-            src="assets/imgs/icons/social-media/email-icon.webp"
-            alt="email"
-            class="social-media-logo"
-          />
+        <li class="social-media-item">
+          <a href="/" class="social-media-link">
+            <img
+              src="assets/imgs/icons/social-media/email-icon.webp"
+              alt="email"
+              class="social-media-logo"
+            />
+          </a>
         </li>
-        <li class="social-media-link">
-          <img
-            src="assets/imgs/icons/social-media/whatsapp-icon.webp"
-            alt="whatsapp"
-            class="social-media-logo"
-          />
+        <li class="social-media-item">
+          <a href="/" class="social-media-link">
+            <img
+              src="assets/imgs/icons/social-media/whatsapp-icon.webp"
+              alt="whatsapp"
+              class="social-media-logo"
+            />
+          </a>
         </li>
-        <li class="social-media-link">
-          <img
-            src="assets/imgs/icons/social-media/linkedin-icon.webp"
-            alt="linkedin"
-            class="social-media-logo"
-          />
+        <li class="social-media-item">
+          <a href="/" class="social-media-link">
+            <img
+              src="assets/imgs/icons/social-media/linkedin-icon.webp"
+              alt="linkedin"
+              class="social-media-logo"
+            />
+          </a>
         </li>
-        <li class="social-media-link">
-          <img
-            src="assets/imgs/icons/social-media/instagram-icon.webp"
-            alt="instagram"
-            class="social-media-logo"
-          />
+        <li class="social-media-item">
+          <a href="/" class="social-media-link">
+            <img
+              src="assets/imgs/icons/social-media/instagram-icon.webp"
+              alt="instagram"
+              class="social-media-logo"
+            />
+          </a>
         </li>
       </ul>
     </footer>
