--- a/index.html
+++ b/index.html
@@ -10,7 +10,40 @@
     <link rel="icon" type="image/x-icon" href="assets/imgs/favicon.ico" />
     <link rel="stylesheet" href="./assets/css/reset.css" />
     <link rel="stylesheet" href="./assets/css/variables.css" />
-    <link rel="stylesheet" href="./assets/css/style.css" />
+
+    <!-- <link rel="stylesheet" href="./assets/css/style.css" /> -->
+    <link rel="stylesheet" href="./assets/css/styles/header/index.css" />
+    <link rel="stylesheet" href="./assets/css/styles/main/container.css" />
+    <link rel="stylesheet" href="./assets/css/styles/main/hero.css" />
+    <link
+      rel="stylesheet"
+      href="./assets/css/styles/main/companies-section.css"
+    />
+    <link rel="stylesheet" href="./assets/css/styles/main/about-section.css" />
+    <link rel="stylesheet" href="./assets/css/styles/main/container.css" />
+    <link
+      rel="stylesheet"
+      href="./assets/css/styles/main/about-for-candidates.css"
+    />
+    <link
+      rel="stylesheet"
+      href="./assets/css/styles/main/about-for-companies.css"
+    />
+    <link
+      rel="stylesheet"
+      href="./assets/css/styles/main/partners-section.css"
+    />
+    <link rel="stylesheet" href="./assets/css/styles/main/faqs-section.css" />
+    <link
+      rel="stylesheet"
+      href="./assets/css/styles/main/featured-vacancies.css"
+    />
+    <link
+      rel="stylesheet"
+      href="./assets/css/styles/main/feedbacks-section.css"
+    />
+    <link rel="stylesheet" href="./assets/css/styles/footer/index.css" />
+
     <link rel="stylesheet" href="./assets/css/responsive.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
