feat(faqs): added the event listener functionality to open and close faqs

--- a/index.html
+++ b/index.html
@@ -324,7 +324,7 @@
                 <h4 class="question">Como cadastrar meu currículo?</h4>
                 <i class="plus-icon">+</i>
               </button>
-              <p class="anwser">
+              <p class="answer">
                 Para cadastrar seu currículo, acesse a sessão de...
               </p>
             </li>
@@ -335,7 +335,7 @@
                 </h4>
                 <i class="plus-icon">+</i>
               </button>
-              <p class="anwser">
+              <p class="answer">
                 Lorem ipsum dolor sit amet consectetur, adipisicing elit...
               </p>
             </li>
@@ -346,7 +346,7 @@
                 </h4>
                 <i class="plus-icon">+</i>
               </button>
-              <p class="anwser">
+              <p class="answer">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit...
               </p>
             </li>
@@ -358,7 +358,7 @@
                 </h4>
                 <i class="plus-icon">+</i>
               </button>
-              <p class="anwser">
+              <p class="answer">
                 Lorem ipsum dolor, sit amet consectetur adipisicing elit...
               </p>
             </li>
@@ -367,7 +367,7 @@
                 <h4 class="question">Há oportunidades de trabalho remoto?</h4>
                 <i class="plus-icon">+</i>
               </button>
-              <p class="anwser">
+              <p class="answer">
                 Lorem ipsum dolor sit amet, consectetur adipisicing elit...
               </p>
             </li>
