--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
             Feedback de profissionais que decolaram!
           </h2>
           <ul class="feedbacks-carousel">
-            <li class="feedback opacity">
+            <li class="feedback">
               <div class="feedback-header">
                 <img
                   src="assets/imgs/avatar/joao-avatar.webp"
@@ -523,7 +523,7 @@
                 /joãopedro
               </p>
             </li>
-            <li class="feedback opacity">
+            <li class="feedback">
               <div class="feedback-header">
                 <img
                   src="assets/imgs/avatar/solange-avatar.webp"
@@ -635,5 +635,6 @@
       </ul>
     </footer>
   </body>
-  <script src="./assets/js/index.js" type="text/javascript"></script>
+  <script src="./assets/js/faqs.js" type="text/javascript"></script>
+  <script src="./assets/js/feedbacks.js" type="text/javascript"></script>
 </html>
