chore(companies\partners): remove logo from companies

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
             plataforma e explore-as agora!
           </p>
         </div>
-        <div class="companies-info">
+        <!-- <div class="companies-info">
           <ul class="companies-list">
             <li class="company">
               <img
@@ -179,7 +179,7 @@
           <p class="vacancy-number">
             <strong>+267 vagas</strong> estão esperando por você!
           </p>
-        </div>
+        </div> -->
       </section>
 
       <section class="about-section">
@@ -267,7 +267,7 @@
             Estamos entusiasmados em oferecer aos nossos Juninhos recursos
             educacionais de alta qualidade, graças às nossas valiosas parcerias!
           </p>
-          <ul class="partners-list">
+          <!-- <ul class="partners-list">
             <li class="partner udemy">
               <img
                 src="assets/imgs/icons/partners/udemy-icon.webp"
@@ -310,7 +310,7 @@
                 class="partner-image"
               />
             </li>
-          </ul>
+          </ul> -->
         </div>
       </section>
 
