fix: changing text + partner logo

--- a/index.html
+++ b/index.html
@@ -124,16 +124,16 @@
             plataforma e explore-as agora!
           </p>
         </div>
-        <!-- <div class="companies-info">
+       <div class="companies-info">
           <ul class="companies-list">
             <li class="company">
               <img
-                src="./assets/imgs/icons/companies/dropbox-icon.webp"
+                src="./assets/imgs/icons/companies/logo-recruiter.jpg"
                 alt="logo"
                 class="company-logo"
               />
             </li>
-            <li class="company">
+            <!-- <li class="company">
               <img
                 src="./assets/imgs/icons/companies/amazon-icon.webp"
                 alt="logo"
@@ -174,12 +174,12 @@
                 alt="logo"
                 class="company-logo"
               />
-            </li>
+            </li> -->
           </ul>
           <p class="vacancy-number">
             <strong>+267 vagas</strong> estão esperando por você!
           </p>
-        </div> -->
+        </div>
       </section>
 
       <section class="about-section">
