fix: text change

--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
           <h3 class="partners-title">Parceiros de Excelência!</h3>
           <p class="partners-text">
             Estamos entusiasmados em oferecer aos nossos Juninhos recursos
-            educacionais de alta qualidade, graças às nossas valiosas parcerias!
+            de alta qualidade, graças às nossas valiosas parcerias!
           </p>
           <!-- <ul class="partners-list">
             <li class="partner udemy">
